FM refactoring