@@ -7,16 +7,14 @@ import cz.gattserver.grass.core.services.FileSystemService;
 import cz.gattserver.grass.fm.config.FMConfiguration;
 import cz.gattserver.grass.fm.interfaces.FMItemTO;
 import cz.gattserver.grass.fm.service.FMService;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.Validate;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.util.FileSystemUtils;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
@@ -25,28 +23,21 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+@Slf4j
 public class FMExplorer {
-
-    private Logger logger = LoggerFactory.getLogger(FMExplorer.class);
-
-    @Autowired
-    private FMService fmService;
-
-    @Autowired
-    private FileSystemService fileSystemService;
 
     /**
      * Filesystem, pod kterým {@link FMExplorer} momentálně operuje
      */
-    private FileSystem fileSystem;
+    private final FMService fmService;
+    private final FileSystemService fileSystemService;
 
     /**
      * Cesta ke kořeni FM úložiště
      */
-    private Path rootPath;
+    private final Path rootPath;
 
     /**
      * Plná cesta od systémového kořene
@@ -62,21 +53,14 @@ public class FMExplorer {
      */
     public FMExplorer(FileSystem fileSystem) {
         Validate.notNull(fileSystem, "Filesystem nesmí být null");
+        this.fmService = SpringContextHelper.getBean(FMService.class);
+        this.fileSystemService = SpringContextHelper.getBean(FileSystemService.class);
 
-        this.fileSystem = fileSystem;
-        loadRootDirFromConfiguration();
-
-        currentAbsolutePath = rootPath;
-
-        SpringContextHelper.inject(this);
-    }
-
-    private void loadRootDirFromConfiguration() {
         FMConfiguration configuration = loadConfiguration();
         String rootDir = configuration.getRootDir();
-        rootPath = fileSystem.getPath(rootDir);
+        rootPath = fileSystem.getPath(rootDir).normalize();
         if (!Files.exists(rootPath)) throw new IllegalStateException("Kořenový adresář FM modulu musí existovat");
-        rootPath = rootPath.normalize();
+        currentAbsolutePath = rootPath;
     }
 
     private FMConfiguration loadConfiguration() {
@@ -108,7 +92,7 @@ public class FMExplorer {
     }
 
     private FileProcessState goToDir(Path path) {
-        if (!isValid(path)) return FileProcessState.NOT_VALID;
+        if (isInvalid(path)) return FileProcessState.NOT_VALID;
         if (!Files.exists(path)) return FileProcessState.MISSING;
         if (!Files.isDirectory(path)) return FileProcessState.DIRECTORY_REQUIRED;
         currentAbsolutePath = path;
@@ -116,12 +100,10 @@ public class FMExplorer {
     }
 
     /**
-     * Ověří, že požadovaný adresář nepodtéká kořenový adresář
-     *
-     * @throws IOException pokud testovaný soubor neexistuje
+     * Zjistí, zda požadovaný adresář podtéká kořenový adresář
      */
-    public boolean isValid(Path adeptPath) {
-        return adeptPath.normalize().startsWith(rootPath);
+    public boolean isInvalid(Path adeptPath) {
+        return !adeptPath.normalize().startsWith(rootPath);
     }
 
     /**
@@ -133,12 +115,12 @@ public class FMExplorer {
     public FileProcessState createNewDir(String path) {
         Path newPath = currentAbsolutePath.resolve(path).normalize();
         try {
-            if (!isValid(newPath)) return FileProcessState.NOT_VALID;
+            if (isInvalid(newPath)) return FileProcessState.NOT_VALID;
             if (Files.exists(newPath)) return FileProcessState.ALREADY_EXISTS;
             fileSystemService.createDirectoryWithPerms(newPath);
             return FileProcessState.SUCCESS;
         } catch (IOException e) {
-            logger.error("Nezdařilo se vytvořit nový adresář {}", newPath.toString(), e);
+            log.error("Nezdařilo se vytvořit nový adresář {}", newPath, e);
             return FileProcessState.SYSTEM_ERROR;
         }
     }
@@ -146,8 +128,6 @@ public class FMExplorer {
     /**
      * Vrátí počet položek pro výpis obsahu aktuálního adresáře. Započítává i
      * odkaz ".." na nadřazený adresář.
-     *
-     * @return
      */
     public int listCount(String filterName) {
         try (Stream<Path> stream = Files.list(currentAbsolutePath).filter(p -> p.getFileName().toString().toLowerCase()
@@ -160,27 +140,25 @@ public class FMExplorer {
         }
     }
 
+    private Stream<FMItemTO> createParentStream() {
+        return currentAbsolutePath.equals(rootPath) ? Stream.empty() :
+                Stream.of(currentAbsolutePath.resolve("..")).map(e -> FMUtils.mapPathToItem(e, currentAbsolutePath));
+    }
+
     /**
      * Vrátí {@link Stream} absolutních {@link Path} a na začátku ".." odkaz na
      * nadřazený adresář.
-     *
-     * @param offset offset pro stránkování
-     * @param limit  velikost stránky
-     * @param list
-     * @return
      */
     public Stream<FMItemTO> listing(String filterName, int offset, int limit, List<QuerySortOrder> list) {
-        try (Stream<FMItemTO> streamParent = currentAbsolutePath.equals(rootPath) ? Stream.empty() :
-                Stream.of(currentAbsolutePath.resolve("..")).map(e -> FMUtils.mapPathToItem(e, currentAbsolutePath));
-             Stream<FMItemTO> streamFiles = Files.list(currentAbsolutePath)
-                     .filter(p -> p.getFileName().toString().toLowerCase()
-                             .contains(filterName == null ? "" : filterName.toLowerCase()))
-                     .map(e -> FMUtils.mapPathToItem(e, currentAbsolutePath))
-                     .sorted((to1, to2) -> FMUtils.sortFile(to1, to2, list))) {
+        try (Stream<FMItemTO> streamParent = createParentStream();
+             Stream<Path> streamFiles = Files.list(currentAbsolutePath)) {
+            Stream<FMItemTO> resultStream = streamFiles.filter(p -> p.getFileName().toString().toLowerCase()
+                            .contains(filterName == null ? "" : filterName.toLowerCase()))
+                    .map(e -> FMUtils.mapPathToItem(e, currentAbsolutePath))
+                    .sorted((to1, to2) -> FMUtils.sortFile(to1, to2, list));
             // musí se přehodit, aby nezůstal viset původní stream, na kterém
             // jsou vytvořené zámky na soubory
-            return Stream.concat(streamParent, streamFiles).skip(offset).limit(limit).collect(Collectors.toList())
-                    .stream();
+            return Stream.concat(streamParent, resultStream).skip(offset).limit(limit).toList().stream();
         } catch (IOException e) {
             throw new IllegalStateException("Nezdařilo se získat list souborů", e);
         }
@@ -202,7 +180,7 @@ public class FMExplorer {
         } catch (FileAlreadyExistsException f) {
             return FileProcessState.ALREADY_EXISTS;
         } catch (IOException e) {
-            logger.error("Nezdařilo se vytvořit soubor {}", path, e);
+            log.error("Nezdařilo se vytvořit soubor {}", path, e);
             return FileProcessState.SYSTEM_ERROR;
         }
         return FileProcessState.SUCCESS;
@@ -217,12 +195,12 @@ public class FMExplorer {
     public FileProcessState deleteFile(String path) {
         Path pathToDelete = currentAbsolutePath.resolve(path).normalize();
         try {
-            if (!isValid(pathToDelete) || rootPath.equals(pathToDelete)) return FileProcessState.NOT_VALID;
+            if (isInvalid(pathToDelete) || rootPath.equals(pathToDelete)) return FileProcessState.NOT_VALID;
             if (!Files.exists(pathToDelete)) return FileProcessState.MISSING;
             FileSystemUtils.deleteRecursively(pathToDelete);
             return FileProcessState.SUCCESS;
         } catch (IOException e) {
-            logger.error("Nezdařilo se smazat soubor {}", path, e);
+            log.error("Nezdařilo se smazat soubor {}", path, e);
             return FileProcessState.SYSTEM_ERROR;
         }
     }
@@ -238,14 +216,14 @@ public class FMExplorer {
         Path currentPath = currentAbsolutePath.resolve(path).normalize();
         Path renamedPath = currentPath.getParent().resolve(newPath).normalize();
         try {
-            if (!isValid(currentPath) || !isValid(renamedPath) || rootPath.equals(currentPath))
+            if (isInvalid(currentPath) || isInvalid(renamedPath) || rootPath.equals(currentPath))
                 return FileProcessState.NOT_VALID;
             if (!Files.exists(currentPath)) return FileProcessState.MISSING;
             if (Files.exists(renamedPath)) return FileProcessState.ALREADY_EXISTS;
             Files.move(currentPath, renamedPath);
             return FileProcessState.SUCCESS;
         } catch (IOException e) {
-            logger.error("Nezdařilo se přejmenovat soubor {} na {}", path, newPath, e);
+            log.error("Nezdařilo se přejmenovat soubor {} na {}", path, newPath, e);
             return FileProcessState.SYSTEM_ERROR;
         }
     }
@@ -253,8 +231,6 @@ public class FMExplorer {
     /**
      * Připraví dle aktuální cesty (od FM kořene) díly, ze kterých lze sestavit
      * breadcrumb navigaci.
-     *
-     * @return
      */
     public List<FMItemTO> getBreadcrumbChunks() {
         Path next = currentAbsolutePath;
@@ -284,7 +260,7 @@ public class FMExplorer {
      * něm byl.
      *
      * @param contextRootURL kořenové url aplikace, například
-     *                       <code>http://testweb/grass</code>
+     *                       <code><a href="http://testweb/grass">http://testweb/grass</a></code>
      * @param path           cesta k souboru z aktuálního adresáře
      * @return link k souboru
      */
@@ -305,7 +281,7 @@ public class FMExplorer {
     /**
      * Získá URL pro aktuální stav FM. Pokud je tedy například FM v adresáři
      * <code>alfa</code>, contextRoot aplikace je
-     * <code>http://testweb/grass</code> a URL cesta k FM modulu je
+     * <code><a href="">http://testweb/grass</a></code> a URL cesta k FM modulu je
      * <code>fm-modul</code>, pak výsledné URL bude <br/>
      *
      * <code>http://testweb/grass/fm-modul/alfa</code>
@@ -322,11 +298,7 @@ public class FMExplorer {
         sb.append(modulePageName);
         for (Path part : getCurrentRelativePath()) {
             sb.append("/");
-            try {
-                sb.append(URLEncoder.encode(part.toString(), "UTF-8"));
-            } catch (UnsupportedEncodingException e) {
-                e.printStackTrace();
-            }
+            sb.append(URLEncoder.encode(part.toString(), StandardCharsets.UTF_8));
         }
         return sb.toString();
     }
@@ -334,16 +306,16 @@ public class FMExplorer {
     /**
      *
      * @param contextRootURL kořenové url aplikace, například
-     *                       <code>http://testweb/grass</code>
+     *                       <code><a href="">http://testweb/grass</a></code>
      * @param modulePageName URL cesta k FM modulu, například <code>fm-modul</code>
-     * @param uri            URL, dle kterého se má získat adresář, kam se mám přepnout
+     * @param url            URL, dle kterého se má získat adresář, kam se mám přepnout
      * @return výsledek operace
      */
-    public FileProcessState goToDirByURL(String contextRootURL, String modulePageName, String uri) {
+    public FileProcessState goToDirByURL(String contextRootURL, String modulePageName, String url) {
         // Odparsuj počátek http://host//context-root/fm a získej
         // lokální cestu v rámci FM modulu
-        int start = uri.indexOf(contextRootURL);
-        String fmPath = uri.substring(start + contextRootURL.length() + 1 + modulePageName.length());
+        int start = url.indexOf(contextRootURL);
+        String fmPath = url.substring(start + contextRootURL.length() + 1 + modulePageName.length());
         if (fmPath.isEmpty() || fmPath.startsWith("/")) {
             if (fmPath.startsWith("/")) fmPath = fmPath.substring(1);
             return goToDir(fmPath);
